--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,7 @@ cmake_minimum_required(VERSION 3.12)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-option(BUILD_TESTS "Build tests" ON)
-option(BUILD_DOCS "Build documentation" OFF)
-option(BUILD_COVERAGE "Build code coverage" OFF)
+option(BUILD_COVERAGE "Build coverage" OFF)
 
 set(
   HUNTER_CACHE_SERVERS
@@ -13,81 +11,56 @@ set(
   CACHE STRING "Default cache server"
 )
 
-include("cmake/HunterGate.cmake")
+include("tools/gate/cmake/HunterGate.cmake")
 
 HunterGate(
   URL "https://github.com/cpp-pm/hunter/archive/v0.23.278.tar.gz"
   SHA1 "35fa55bc1dfcf9f4d7264f8bb26cd1759ce1ae07"
 )
 
-# TODO: rename project and delete this comment
-project(template VERSION 0.1.0)
+project(echoservice)
 string(APPEND CMAKE_CXX_FLAGS " -pedantic -Werror -Wall -Wextra")
-string(APPEND CMAKE_CXX_FLAGS " -Wno-unused-command-line-argument")
+string(APPEND CMAKE_CXX_FLAGS " -Wno-unused-command-line-argument -Wno-unused-parameter")
 string(APPEND CMAKE_CXX_FLAGS " -Wshadow -Wnon-virtual-dtor")
 
 hunter_add_package(GTest)
 find_package(GTest CONFIG REQUIRED)
 
-add_library(${PROJECT_NAME} STATIC
-  # enum your files and delete this comment
-  ${CMAKE_CURRENT_SOURCE_DIR}/sources/source.cpp
-)
+hunter_add_package(gRPC)
+find_package(gRPC CONFIG REQUIRED)
 
-add_executable(demo
-  ${CMAKE_CURRENT_SOURCE_DIR}/demo/main.cpp
-)
+set(API_GENERATED_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third-party/echo/ccpkg)
 
-target_include_directories(${PROJECT_NAME} PUBLIC
-  "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
-  "$<INSTALL_INTERFACE:include>"
-)
+set(PROTO_GENERATED_SOURCES
+  "${API_GENERATED_DIR}/echo.pb.cc"
+  "${API_GENERATED_DIR}/google/api/annotations.pb.cc"
+  "${API_GENERATED_DIR}/google/api/http.pb.cc"
+  "${API_GENERATED_DIR}/google/rpc/status.pb.cc")
 
-target_link_libraries(demo ${PROJECT_NAME})
+set(PROTO_GENERATED_HEADERS
+  "${API_GENERATED_DIR}/echo.pb.h"
+  "${API_GENERATED_DIR}/google/api/annotations.pb.h"
+  "${API_GENERATED_DIR}/google/api/http.pb.h"
+  "${API_GENERATED_DIR}/google/rpc/status.pb.h")
 
-if(BUILD_TESTS)
-  add_executable(tests
-    # TODO: enum your files and delete this comment
-    ${CMAKE_CURRENT_SOURCE_DIR}/tests/test.cpp
-  )
-  target_link_libraries(tests ${PROJECT_NAME} GTest::gtest_main)
-  enable_testing()
-  add_test(NAME unit_tests COMMAND tests)
-endif()
+set(PROTO_GENERATED_GRPC_SOURCES
+  "${API_GENERATED_DIR}/echo.grpc.pb.cc"
+  "${API_GENERATED_DIR}/google/api/annotations.grpc.pb.cc"
+  "${API_GENERATED_DIR}/google/api/http.grpc.pb.cc"
+  "${API_GENERATED_DIR}/google/rpc/status.grpc.pb.cc")
 
-if(BUILD_COVERAGE)
-  set(ENABLE_COVERAGE ON CACHE BOOL "Enable coverage build." FORCE)
-  list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/tools/coverage/cmake")
-  find_package(codecov)
-  add_coverage(${PROJECT_NAME})
-  add_coverage(tests)
-  coverage_evaluate()
-endif()
+set(PROTO_GENERATED_GRPC_HEADERS
+  "${API_GENERATED_DIR}/echo.grpc.pb.h"
+  "${API_GENERATED_DIR}/google/api/annotations.grpc.pb.h"
+  "${API_GENERATED_DIR}/google/api/http.grpc.pb.h"
+  "${API_GENERATED_DIR}/google/rpc/status.grpc.pb.h")
 
-if(BUILD_DOCS)
-  set(DOXYGEN_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/_docs)
-  set(DOXYGEN_EXAMPLE_PATH examples)
-  set(DOXYGEN_GENERATE_HTML NO)
-  set(DOXYGEN_GENERATE_MAN YES)
-  find_package(Doxygen)
-  doxygen_add_docs(docs include)
-  install(DIRECTORY ${DOXYGEN_OUTPUT_DIRECTORY}/man DESTINATION share)
-  # add_dependencies(install docs) need to call target docs before install or package
-endif()
+add_executable(grpc_client
+  ${CMAKE_CURRENT_SOURCE_DIR}/sources/main.cpp
+  ${PROTO_GENERATED_SOURCES}
+  ${PROTO_GENERATED_GRPC_SOURCES})
 
-include(CPackConfig.cmake)
+target_include_directories(grpc_client PRIVATE "${API_GENERATED_DIR}")
 
-install(TARGETS ${PROJECT_NAME} demo
-  EXPORT "${PROJECT_NAME}-targets"
-  RUNTIME DESTINATION bin
-  ARCHIVE DESTINATION lib
-  LIBRARY DESTINATION lib
-  INCLUDES DESTINATION include
-)
-
-install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ DESTINATION include)
-
-install(EXPORT "${PROJECT_NAME}-targets"
-  NAMESPACE "${PROJECT_NAME}::"
-  DESTINATION "lib/cmake"
-)
+target_link_libraries(grpc_client
+  gRPC::grpc++ gRPC::grpc++_reflection)
