added gate and proto generated files

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "third-party/echo"]
 	path = third-party/echo
 	url = https://github.com/bmstu-iu8-cpp-sem-3/lab-07-grpc-service
+[submodule "third-party/suggest"]
+	path = third-party/suggest
+	url = https://github.com/typeperfest/lab07-grpc.git
+[submodule "tools/gate"]
+	path = tools/gate
+	url = https://github.com/cpp-pm/gate
